--- a/summary/关于继承.md
+++ b/summary/关于继承.md
@@ -17,3 +17,190 @@
 原型对象是一个内部对象，应当使用`__proto__`访问。`prototype`属性包含（指向）一个对象，你在这个对象中定义需要被继承的成员。
 
 参考链接：[MDN-对象原型](https://developer.mozilla.org/zh-CN/docs/Learn/JavaScript/Objects/Object_prototypes)
+
+## JS中继承的实现方式 ##
+### 1. 原型链继承 ###
+利用原型链来实现继承，超类的一个实例作为子类的原型。
+
+	function SuperType() {
+		this.property = true;
+	}
+	SuperType.prototype.getSuperValue = function() {
+		return this.property;
+	};
+	function SubType() {
+		this.sybproperty = false;
+	}
+
+	// 继承了SuperType
+	SubType.prototype = new SuperType();
+	SubType.prototype.getSubvalue = function() {
+		return this.subproperty;
+	};
+	var instance = new SubType();
+	console.log(instance.getSuperValue()); // true
+以上的继承是通过创建SuperType的实例，并将该实例赋给SubType.prototype实现的。实现的本质是**重写原型对象，代之以一个新类型的实例。**
+
+    console.log(SuperType.prototype)
+    console.log(SubType.prototype)
+    console.log(instance)
+![](https://i.imgur.com/N4GmK66.png)
+
+注意：给原型添加方法的代码一定要放在替换原型的语句之后。在通过原型链实现继承时，不能使用对象字面量创建原型方法。因为这样做就会重写原型链。
+
+缺点：
+
+1. 引用类型值的原型属性会被所有实例共享
+
+        function SuperType() {
+            this.color = ["red", "blue", "green"];
+        }
+        function SubType(){}
+        SubType.prototype = new SuperType();
+        var instance1 = new SubType();
+        instance1.color.push("black");
+        console.log(instance1.color); // ["red", "blue", "green", "black"]
+        var instance2 = new SubType();
+        console.log(instance2.color); // ["red", "blue", "green", "black"]
+2. 在创建子类型的实例时，不能向超类型的构造函数中传递蚕食。
+### 2. 构造函数继承/伪造对象/经典继承 ###
+基本思想：在子类型构造函数的内部调用超类型构造函数。函数只不过是在特定环境中执行代码的对象，因此通过使用apply()和call()方法亦可以在（将来）新创建的对象上执行构造函数。
+
+例子：
+
+    function SuperType() {
+        this.colors = ["red", "blue", "green"];
+    }
+    function SubType() {
+        // 继承了SuperType
+        SuperType.call(this);
+    }
+    var instance1 = new SubType();
+    instance1.colors.push("black");
+    console.log(instance1.colors); // "red", "blue", "green", "black"
+    var instance2 = new SubType();
+    console.log(instance2.colors); // "red", "blue", "green"
+实际上实在（未来将要）新创建的SubType实例的环境下调用了SuperType构造函数。这样一来，就会在新SubType对象上执行SuperType()函数中定义的所有对象初始化代码。结果，SubType的每个实例就都有具有自己的colors属性的副本了。
+
+特点：
+
+1. 传递参数：可以在子类型构造函数中向超类型构造函数传递参数。
+
+		SuperType.call(this, "Nicholas");
+	为了确保SuperType构造函数不会重写子类型的属性，可以在调用超类型构造函数后，再添加应该在子类型中定义的属性。
+2. 方法都在构造函数中定义，不能函数复用。
+
+### 3. 组合继承/伪经典继承 ###
+指的是将原型链和借用构造函数的技术组合到一块，从而发挥二者之长的一种继承方式。其背后的思路是使用原型链实现对原型属性和方法的继承，而通过借用构造函数来实现对实例属性的继承。这样，既通过在原型上定义方法实现了函数复用，又能够保证每个实例都有它自己的属性。
+
+例子：
+
+    function SuperType(name) {
+        this.name = name;
+        this.colors = ['red', 'blue', 'green'];
+    }
+    SuperType.prototype.sayName = function() {
+        console.log(this.name);
+    };
+    function SubType(name, age) {
+        // 继承属性
+        SuperType.call(this, name);
+        this.age = age;
+    }
+    // 继承方法
+    SubType.prototype = new SuperType();
+    SubType.prototype.sayAge = function() {
+        console.log(this.age);
+    };
+    var instance1 = new SubType("Nicholas", 29);
+    instance1.colors.push("black");
+    console.log(instance1.colors);
+    instance1.sayName();
+    instance1.sayAge();
+
+    var instance2 = new SubType("Greg", 27);
+    console.log(instance2.colors);
+    instance2.sayName();
+    instance2.sayAge();
+
+特点： 
+
+1. 方法复用，即用的都是同一个方法。
+2. 每个实例都有自己的引用类型值，不共享。
+
+### 4. 原型式继承 ###
+借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型。
+
+例子：
+
+    function object(o) {
+        function F() {}
+        F.prototype = o;
+        return new F();
+    }
+在object()函数内部，先创建了一个临时性的构造函数，然后将传入的对象作为这个构造函数的原型，最后返回了这个临时类型的一个新实例。从本质上将，object()对传入其中的对象执行了一次浅复制。
+
+ECMAScript 5 通过Object.create()方法规范化了原型式继承。这个方法接收两个参数：一个用作新对象原型的对象 和（可选的）一个为新对象定义额外属性的对象。
+
+Object.create()方法的第二个参数与Object.defineProperties()方法的第二个参数格式相同：每个属性都是通过自己的描述符定义的。以这种方式指定的任何属性都会覆盖原型对象上的同名属性。
+
+特点： 
+
+1. 引用类型值的属性始终都会共享相应的值，就像使用原型模式一样。
+
+### 5. 寄生式继承 ###
+寄生式继承是与原型式继承紧密相关的一种思路。创建一个仅用于封装继承过程的函数，该函数在内部以某种方式来增强对象，最后再像真地是它做了所有工作一样返回对象。
+
+例子：
+
+    function createAnother(original) {
+        var clone = Object.create(original);
+        clone.sayHi = function() { // 以某种方式来增强这个对象
+            console.log("hi");
+        };
+        return clone;
+    }
+    var person = {
+        name: "Nicholas",
+        friends: ["shelby", "Court", "Van"]
+    };
+    var anotherPerson = createAnother(person);
+    anotherPerson.sayHi();
+
+特点：
+
+1. 使用寄生式继承来为对象添加函数，会由于不能做到函数复用而降低效率；这一点与构造函数模式类似。
+
+### 6. 寄生组合式继承 ###
+组合继承最大的问题就是无论什么情况下，都会调用两次超类型构造函数：一次是在创建子类型原型的时候，另一次实在子类型构造函数内部。
+
+所谓寄生组合式继承，即通过借用构造函数来继承属性，通过原型链的混成形式来继承方法。其背后的基本思路是：不必为了指定子类型的原型而调用超类型的构造函数，我们所需要的无非就是超类型原型的一个副本而已。本质上，就是使用寄生式继承来继承超类型的原型，然后再将结果指定给子类型的原型。寄生组合式继承的基本模式如下所示：
+
+    function inheritPrototype(subType, superType) {
+        var prototype = Object.create(superType.prototype); // 创建对象
+        prototype.constructor = subType; // 增强对象
+        subType.prototype = prototype; // 指定对象
+    }
+在函数内部，第一步是创建超类型原型的一个副本。第二步是为创建的副本添加constructor属性，从而弥补因重写原型而失去默认的constructor属性。最后一步，将新创建的对象（即副本）赋值给子类型的原型。这样，我们就可以用低啊用inheritPrototype()函数的语句，去替换前面例子中为子类型原型赋值的语句了。
+
+	SubType.prototype = new SuperType();
+	换成
+	inheritPrototype(SubType, SuperType);
+	
+	// 下面是完整例子
+	function SuperType(name) {
+		this.name = name;
+		this.colors = ["red", "blue", "green"];
+	}
+	SuperType.prototype.sayName = function() {
+		console.log(this.name);
+	};
+	function SubType(name, age) {
+		SuperType.call(this, name);
+		this.age = age;
+	}
+	inheritPrototype(SubType, SuperType);
+	SubType.prototype.sayAge = function() {
+		console.log(this.age);
+	};
+这个例子的高效率体现在它只调用了一次SuperType构造函数，并且因此避免了在SubType.prototype上面创建不必要、多余的属性。与此同时，原型链还能保持不变。
