Detailed rendering process

--- a/summary/事件循环.md
+++ b/summary/事件循环.md
@@ -66,10 +66,11 @@ event loop会不断循环上面的步骤，概括来说：
 
 渲染的基本流程：
 
-1. 处理HTML标记并构建DOM树
-2. 处理CSS标记并构建CSSOM树，将DOM与CSSOM合并成一个渲染树
-3. 根据渲染树来布局，以计算每个节点的几何信息
-4. 将各个节点绘制到屏幕上
+1. Dom tree：处理HTML标记并构建DOM树，dom树的创建是一个深遍历的过程。
+2. CSSOM tree：处理CSS标记并构建CSSOM树，、
+3. Render tree：将DOM与CSSOM合并成一个渲染树，不同于DOM tree，它将一些没有必要渲染的dom节点进行了相应的处理。例如：header标签，display为none的标签元素等。
+3. layout：根据渲染树来布局，以计算每个节点的几何信息
+4. painting：通过位置和样式将各个节点绘制到屏幕上
 
 根据例子得出的结论：
 - 在一轮event loop中多次修改同一dom，只有最后一次会进行绘制。
