--- a/summary/关于继承.md
+++ b/summary/关于继承.md
@@ -80,7 +80,7 @@
     console.log(instance1.colors); // "red", "blue", "green", "black"
     var instance2 = new SubType();
     console.log(instance2.colors); // "red", "blue", "green"
-实际上实在（未来将要）新创建的SubType实例的环境下调用了SuperType构造函数。这样一来，就会在新SubType对象上执行SuperType()函数中定义的所有对象初始化代码。结果，SubType的每个实例就都有具有自己的colors属性的副本了。
+实际上是在（未来将要）新创建的SubType实例的环境下调用了SuperType构造函数。这样一来，就会在新SubType对象上执行SuperType()函数中定义的所有对象初始化代码。结果，SubType的每个实例就都有具有自己的colors属性的副本了。
 
 特点：
 
