--- a/summary/js/箭头函数.md
+++ b/summary/js/箭头函数.md
@@ -11,6 +11,8 @@
 
 > 如果箭头函数的代码块部分多余一条语句，就要使用大括号将它们括起来，并且使用`return`语句返回。
 
+	var sum = (num1, num2) => {return num1 + num2;}
+
 > 由于大括号被解释为代码块，所以如果箭头函数直接返回一个对象，必须在对象外面加上括号，否则会报错。
 
 ## 注意 ##
@@ -22,6 +24,21 @@
 除了`this`，以下三个 变量在箭头函数之中也是不存在的，指向外层函数的对应变量：`arguments`、`super`、`new.target`。
 
 另外，由于箭头函数没有自己的`this`，所以当然也就不能用`call()`、`apply()`、`bind()`这些方法去改变`this`的指向。
+
+## 箭头函数的作用 ##
+- 箭头函数可以与变量解构结合使用。
+
+		const full = ({ first, last }) => first + ' ' + last;
+		// 等同于
+		function full(person) {
+			return person.first + ' ' + person.last;
+		}
+- 箭头函数使得表达式更加简洁
+- 简化回调函数
+
+## 不适用场合 ##
+- 定义函数的方法，且该方法内部包括`this`。
+- 需要动态`this`	的时候，也不应使用箭头函数。
 
 ## 双冒号运算符 ##
 函数绑定符是并排两个冒号（`::`），双冒号左边是一个对象，右边是一个函数。该运算符会自动将左边的对象，作为上下文环境（即`this	`对象），绑定到右边的函数上面。
